--- a/Dialogflow-18/views/index.ejs
+++ b/Dialogflow-18/views/index.ejs
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
-    hello
+    <div class="text-center mb-4">
+        <form action="/" method="post">
+            <div class="form-group">
+                <input type="text" name='query' id="query" class="mb-4" placeholder="Ask Anything about me">
+                <button type="submit" class="btn btn-primary mb-2">Ask</button>
+            </div>
+
+
+        </form>
+        <%= reply %>
+    </div>
 </body>
 
 </html>
